# sqlite-export-for-ynab

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  tox.ini
.github/: dependabot.yml
.github/workflows/: main.yml  release.yml
sqlite_export_for_ynab/: __init__.py  _example.py  _main.py
sqlite_export_for_ynab/ddl/: create-relations.sql  create-tables.sql  create-tables.sqlite  drop-relations.sql  drop-tables.sql  drop-tables.sqlite
testing/: fixtures.py
tests/: _example_test.py  _main_test.py
