[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[dependency-groups]
dev = [
  "covdefaults>=2.1.0",
  "coverage",
  "pytest",
  "pytest-asyncio",
]

[project]
authors = [{name = "Max R", email = "mxr@users.noreply.github.com"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "aiohttp>=3",
  "aiopathlib",
  "aiosqlite",
  "asyncio-for-ynab~=1.85.0",
  "fasteners",
  "rich>=10",
  "tenacity",
]
description = "SQLite Export for YNAB - Export YNAB Data to SQLite"
keywords = ["ynab", "sqlite", "sql", "budget", "plan", "cli"]
license = "MIT"
license-files = ["LICENSE"]
name = "sqlite_export_for_ynab"
readme = "README.md"
requires-python = ">=3.12"
version = "2.9.3"

[project.scripts]
sqlite-export-for-ynab = "sqlite_export_for_ynab._main:main"

[project.urls]
Homepage = "https://github.com/mxr/sqlite-export-for-ynab"

[tool.coverage.run]
plugins = ["covdefaults"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
disallow_untyped_defs = false
module = "testing.*"

[[tool.mypy.overrides]]
disallow_untyped_defs = false
module = "tests.*"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = [
  "UP",  # see pyupgrade
  "B",  # see flake8-bugbear
  "A",  # see flake8-builtins
  "C4",  # see flake8-comprehension
  "SIM",  # see flake8-simplify
  "TC",  # see flake8-type-checking
]

[tool.setuptools.package-data]
sqlite_export_for_ynab = ["py.typed"]
"sqlite_export_for_ynab.ddl" = ["*.sql"]

[tool.setuptools.packages]
find = {}

[tool.sqlfluff.layout.type.comma]
line_position = "leading"
spacing_before = "touch"

[tool.sqlfluff.layout.type.from_clause]
keyword_line_position = "leading"

[tool.sqlfluff.layout.type.when_clause]
keyword_line_position = "leading"

[tool.sqlfluff.rules.capitalisation.functions]
extended_capitalisation_policy = 'upper'

[tool.sqlfluff.rules.capitalisation.identifiers]
extended_capitalisation_policy = 'lower'

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = 'upper'

[tool.sqlfluff.rules.capitalisation.literals]
capitalisation_policy = 'upper'

[tool.sqlfluff.rules.convention.not_equal]
preferred_not_equal_style = "c_style"

[tool.sqlfluff.rules.convention.terminator]
multiline_newline = true
require_final_semicolon = true

[tool.sqlfluff.rules.references.quoting]
prefer_quoted_keywords = true

[tool.tox]
env_list = ["py", "pypy3", "pre-commit"]

[tool.tox.env.pre-commit]
commands = [["pre-commit", "run", "--all-files", "--show-diff-on-failure"]]
deps = ["pre-commit-uv"]
skip_install = true

[tool.tox.env_run_base]
commands = [
  ["coverage", "erase"],
  ["coverage", "run", "-m", "pytest", "{posargs:tests}"],
  ["coverage", "report"],
]
dependency_groups = ["dev"]

[tool.ty.rules]
all = "error"
